tests/expectations/compiler/constants/block_height_type_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372003]: Expected type `u64` but type `u32` was found
    --> compiler-test:5:22
     |
   5 |         let x: u64 = block.height;
     |                      ^^^^^^^^^^^^
"""]
